<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_view_checkout_logo"
        style="@style/Checkout.Logo"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_default_logo" />

    <android.support.v7.widget.AppCompatTextView
        style="@style/Checkout.Title.Text"
        android:id="@+id/checkout_service_error_title"
        android:text="@string/checkout_error_service_unavailable_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_checkout_logo" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/checkout_service_error_description"
        style="@style/Checkout.Process.WaitMsg.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkout_error_service_unavailable_description"
        app:layout_constraintBottom_toTopOf="@+id/checkout_service_error_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkout_service_error_title"
        app:layout_constraintVertical_bias="0.025" />

    <android.support.v7.widget.AppCompatButton
        style="@style/Checkout.ActionButton.Button"
        android:id="@+id/checkout_service_error_button"
        android:text="@string/checkout_error_service_unavailable_close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>