<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/stored_data_bottom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/checkout_main_color"
        >

        <TextView
            android:id="@+id/stored_data_bottom_title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/muli_bold"
            android:textColor="@color/checkout_main_text"
            android:textSize="@dimen/checkout_main_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stored_data_bottom_title_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/muli_regular"
            android:textColor="@color/checkout_main_text"
            android:textSize="@dimen/checkout_main_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stored_data_bottom_title_main" />

    </android.support.constraint.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/stored_data_bottom_pay"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stored_data_bottom_title">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/stored_data_bottom_pay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/stored_data_bottom_pay_text"
            app:srcCompat="@drawable/ic_payment_black_24dp" />

        <TextView
            android:id="@+id/stored_data_bottom_pay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="12dp"
            android:text="@string/checkout_stored_bottom_pay_label"
            android:textColor="@color/checkout_primary_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stored_data_bottom_qr"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stored_data_bottom_pay">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/stored_data_bottom_qr_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/stored_data_bottom_qr_text"
            app:srcCompat="@drawable/qr_icon_black" />

        <TextView
            android:id="@+id/stored_data_bottom_qr_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="12dp"
            android:text="@string/checkout_stored_bottom_qr_label"
            android:textColor="@color/checkout_primary_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/stored_data_bottom_delete"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stored_data_bottom_qr">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/stored_data_bottom_delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/stored_data_bottom_delete_text"
            app:srcCompat="@drawable/ic_delete_red_24dp"
            tools:layout_editor_absoluteX="203dp"
            tools:layout_editor_absoluteY="222dp" />

        <TextView
            android:id="@+id/stored_data_bottom_delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="12dp"
            android:text="@string/checkout_stored_bottom_delete_label"
            android:textColor="@color/checkout_primary_text"
            tools:layout_editor_absoluteY="68dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
